delete 쪽 처리 중